--- a/assets/styles/home-page.css
+++ b/assets/styles/home-page.css
@@ -7,7 +7,7 @@ body{
 
 body::before{
     content: "";
-    background-image: url('./assets/images/spider-man-background.jpg');
+    background-image: url('/assets/images/spider-man-background.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -55,6 +55,7 @@ body::before{
     object-fit: cover;
     position: absolute;
     opacity: 1;
+    transition: 1s ease-in-out;
 }
 
 .s-card__image {
@@ -62,6 +63,7 @@ body::before{
     height: 100%;
     object-fit: contain;
     position: relative;
+    transition: opacity 1s ease-in-out;
 }
 
 .s-card__title{
@@ -113,3 +115,13 @@ body::before{
     position: absolute;
 }
 
+/* hover animacao */
+
+.s-card--hovered .s-card__background {
+    cursor: pointer;
+    opacity: 0;
+}
+
+.s-card--hovered .s-card__image {
+    transform: scale(1.4);
+}
