--- a/assets/styles/internal.css
+++ b/assets/styles/internal.css
@@ -21,3 +21,24 @@
     background-color: #808080;
     padding-left: 30px;
 }
+
+.navigator {
+    height: 80vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    position: relative;
+}
+
+.navigator ul li {
+    margin: 3.75rem 0;
+}
+
+.navigator ul li :first-child {
+    margin-top: 0;
+}
+
+.navigator ul li :last-child {
+    margin-bottom: 0;
+}
