--- a/assets/styles/internal.css
+++ b/assets/styles/internal.css
@@ -1,4 +1,5 @@
 @import url('reset.css');
+@import url('global.css');
 
 .s-wrapper{
     display: flex;
@@ -41,4 +42,41 @@
 
 .navigator ul li :last-child {
     margin-bottom: 0;
+}
+
+.navigator ul li a {
+    color: #fff;
+    border: solid 0.125rem #fff;
+    width: 2.8125rem;
+    height: 2.8125rem;
+    border-radius: 50%;
+    background-color: #000000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.navigator::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    width: 0.125rem;
+    height: 100%;
+    background-color: #fff;
+    z-index: 0;
+}
+
+.navigator ul {
+    z-index: 1;
+}
+
+.navigator ul li a:hover,
+.navigator ul li a.active {
+    color: var(--primary-color);
+    background-color: #fff;
+}
+
+.navigator .navigator__icon {
+    position: absolute;
+    top: -1.25rem;
 }
