--- a/assets/styles/internal.css
+++ b/assets/styles/internal.css
@@ -10,19 +10,49 @@
 .s-wrapper .s-left-column {
     width: 100px;
     height: 100%;
-    background-color: #000000;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: fixed;
+    padding-right: 3.125rem;
+    left: 0;
+    top: 0;
+    z-index: 1;
 }
 
 .s-wrapper .s-main-content {
     height: 100%;
     width: 100%;
     background-color: #808080;
-    padding-left: 30px;
+    padding-left: 8.125rem;
 }
 
+.s-wrapper .s-main-content__top{
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.s-wrapper .s-main-content__bottom{
+    height: 20vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+.s-wrapper .s-main-content .s-logo img {
+    margin-top: 3.125rem;
+    margin-left: 0;
+    margin-bottom: 1.875rem;
+
+}
+
+
+
+
+
+/* navigator */
 .navigator {
     height: 80vh;
     display: flex;
