--- a/assets/styles/internal.css
+++ b/assets/styles/internal.css
@@ -1,5 +1,7 @@
 @import url('reset.css');
 @import url('global.css');
+@import url('components/navigator.css');
+@import url('components/pills.css');
 
 .s-wrapper{
     display: flex;
@@ -48,65 +50,18 @@
 
 }
 
-
-
-
-
-/* navigator */
-.navigator {
-    height: 80vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    position: relative;
+.s-wrapper .s-main-content__top .s-description {
+    background-color: rgba(0, 0, 0, 0.7);
+    max-width: 50%;
+    padding: 1.25rem;
+    border-radius: 0.625rem;
 }
 
-.navigator ul li {
-    margin: 3.75rem 0;
-}
-
-.navigator ul li :first-child {
-    margin-top: 0;
-}
-
-.navigator ul li :last-child {
-    margin-bottom: 0;
-}
-
-.navigator ul li a {
+.s-wrapper .s-main-content__top .s-description .s-description__text p{
     color: #fff;
-    border: solid 0.125rem #fff;
-    width: 2.8125rem;
-    height: 2.8125rem;
-    border-radius: 50%;
-    background-color: #000000;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    line-height: 170%;
 }
 
-.navigator::before{
-    content: "";
-    position: absolute;
-    top: 0;
-    width: 0.125rem;
-    height: 100%;
-    background-color: #fff;
-    z-index: 0;
-}
-
-.navigator ul {
-    z-index: 1;
-}
-
-.navigator ul li a:hover,
-.navigator ul li a.active {
-    color: var(--primary-color);
-    background-color: #fff;
-}
-
-.navigator .navigator__icon {
-    position: absolute;
-    top: -1.25rem;
+.s-wrapper .s-main-content__top .s-description .pills {
+    margin-bottom: 1.25rem;
 }
