--- a/assets/styles/internal.css
+++ b/assets/styles/internal.css
@@ -76,3 +76,8 @@
 .s-wrapper .s-main-content .s-links ul{
     display: flex;
 }
+
+.s-spiderman-01-01 {
+    background-image: url('../images/spiderman-tobey/movie-01/background.png');
+    background-size: cover;
+}
