personalizando botao da pagina principal

--- a/assets/styles/home-page.css
+++ b/assets/styles/home-page.css
@@ -118,6 +118,13 @@ body::before{
     position: absolute;
 }
 
+.s-controller__button--active {
+    background-color: #fff;
+    color: var(--primary-color);
+    border: 0.1875rem solid var(--primary-color);
+    outline: 0.125rem solid #fff;
+}
+
 /* hover animacao */
 
 .s-card--hovered .s-card__background {
