--- a/assets/styles/home-page.css
+++ b/assets/styles/home-page.css
@@ -41,15 +41,29 @@ body::before{
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    perspective: 187.5rem;
 }
 
 .s-card{
     border: 0.5rem solid #fff;
-    width: calc(100% / 3 - 8%);
+    width: 100%;
     height: 70vh;
-    position: relative;
+    position: absolute;
     transition: filter .5s ease-in-out;
 }
+
+.s-card:nth-child(1) {
+    transform: rotateY(0deg) translateZ(50vw); 
+}
+
+.s-card:nth-child(2) {
+    transform: rotateY(120deg) translateZ(50vw); 
+}
+
+.s-card:nth-child(3) {
+    transform: rotateY(240deg) translateZ(50vw); 
+}
+
 
 .s-card__background {
     width: 100%;
@@ -79,11 +93,13 @@ body::before{
 }
 
 .s-controller {
-    position: relative;
+    position: absolute;
     display: flex;
     align-items: center;
     justify-content: center;
     margin-top: 3rem;
+    bottom: 1.5rem;
+    width: 100%;
 }
 
 .s-controller__button {
@@ -160,4 +176,11 @@ body[id^="spider-man-"] .s-card:not(.s-card--hovered) {
 .s-card--hovered .s-card__title {
     bottom: 50%;
 
+}
+
+.s-card-carousel{
+    display: flex;
+    justify-content: center;
+    width: calc(100vw / 3 - 10%);
+    transform-style: preserve-3d;
 }
