--- a/assets/styles/home-page.css
+++ b/assets/styles/home-page.css
@@ -178,9 +178,10 @@ body[id^="spider-man-"] .s-card:not(.s-card--hovered) {
 
 }
 
-.s-card-carousel{
+.s-cards-carousel{
     display: flex;
     justify-content: center;
     width: calc(100vw / 3 - 10%);
     transform-style: preserve-3d;
+    transition: transform 0.4s ease-in;
 }
