--- a/assets/styles/internal.css
+++ b/assets/styles/internal.css
@@ -9,12 +9,12 @@
     display: flex;
     height: 100vh;
     flex-flow: row nowrap;
+    background-color: #808080;
 }
 
 .s-wrapper video {
     position: fixed;
-    width: 100vh;
-    height: 100vh;
+    width: 100%;
 }
 
 .s-wrapper .s-left-column {
@@ -88,3 +88,13 @@
     background-image: url('../images/spiderman-tobey/movie-01/background.png');
     background-size: cover;
 }
+
+.s-spiderman-01-02 {
+    background-image: url('../images/spiderman-tobey/movie-02/background.png');
+    background-size: cover;
+  }
+  
+  .s-spiderman-01-03 {
+    background-image: url('../images/spiderman-tobey/movie-03/background.png');
+    background-size: cover;
+  }
